@@ -16,12 +16,6 @@ Library:      defobj
 
 // standard program-wide allocation zones
 
-id  _obj_globalZone;
-id  _obj_scratchZone;
-id  _obj_initZone;
-id  _obj_sessionZone;
-
-
 @implementation Symbol_c
 
 PHASE(Creating)
